[gd_scene load_steps=2 format=3 uid="uid://6o5ft161qga8"]

[ext_resource type="Script" path="res://scripts/slam.gd" id="1_ma3le"]

[node name="Slam" type="CharacterBody2D"]
script = ExtResource("1_ma3le")

[node name="s_attack_collision_R" type="CollisionPolygon2D" parent="."]
position = Vector2(110, -32)
scale = Vector2(3.24306, 1.63487)
polygon = PackedVector2Array(-29.9101, 16.5151, -31.7602, 19.5734, -28.3683, 19.5734, -27.7516, 14.6801, -27.7516, 4.89336, -27.7516, -9.17505, -28.6767, -22.6318, -30.2184, -28.7485, -29.9101, -13.4567, -29.6017, 9.78672)
disabled = true

[node name="SlamAttack" type="Area2D" parent="."]
position = Vector2(0, -15)
collision_layer = 136
collision_mask = 136

[node name="s_attack_collision" type="CollisionPolygon2D" parent="SlamAttack"]
visible = false
position = Vector2(110, -17)
rotation = -6.28319
scale = Vector2(3.24306, 1.63487)
polygon = PackedVector2Array(-29.9101, 16.5151, -31.7602, 19.5734, -28.3683, 19.5734, -27.7516, 14.6801, -27.7516, 4.89336, -27.7516, -9.17505, -28.6767, -22.6318, -30.2184, -28.7485, -29.9101, -13.4567, -29.6017, 9.78672)

[connection signal="body_entered" from="SlamAttack" to="." method="_on_slam_attack_body_entered"]
